Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
   
-  <img src="https://i.imgur.com/H1qsYEl.png" alt="comedic crow gets wholesome support">
+  <img src="https://cnet3.cbsistatic.com/img/F4ZXmvHA7wYsNK6B-ViQoERKbKE=/756x567/2020/06/11/03bf034d-1439-4d6a-bd4a-cd6e6ae26ee1/gettyimages-1145422609.jpg" alt="Turtle swims in a sea of blue">
   
 
 </body>
