Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   
   <img src="https://cnet3.cbsistatic.com/img/F4ZXmvHA7wYsNK6B-ViQoERKbKE=/756x567/2020/06/11/03bf034d-1439-4d6a-bd4a-cd6e6ae26ee1/gettyimages-1145422609.jpg" alt="Turtle swims in a sea of blue">
   
+  <img src="../images/my_company_logo.png" alt="my company name" title="We're here to help you!">
 
 </body>
 </html>
